Thu Jun 13 13:24:34 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Remove
	  unused header includes; don't use "using namespace std;" in a
	  header.

Thu Jun 13 08:30:26 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_positionlist.cc: Remove 'Assert(rd);' since rd
	  is no longer a pointer.

Thu Jun 13 05:07:27 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.h: Update include guard to match source
	  file name.

Thu Jun 13 02:38:20 GMT 2013  Olly Betts <olly@survex.com>

	* common/,net/length.h,net/serialise.h: Fix @file markup which wasn't
	  actually in a doxygen comment.

Thu Jun 13 02:14:22 GMT 2013  Olly Betts <olly@survex.com>

	* preautoreconf: Remove needless use of perl prototype.

Tue Jun 11 00:40:37 GMT 2013  Olly Betts <olly@survex.com>

	* common/remoteprotocol.h,docs/remote_protocol.rst: Bump
	  remote protocol version to 38.o.

Tue Jun 11 00:37:01 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* api/leafpostlist.cc,matcher/,net/serialise.cc,weight/weight.cc,
	  weight/weightinternal.cc,weight/weightinternal.h: Make collection
	  frequency available to Xapian::Weight subclasses.  Extracted from
	  Gaurav Arora's LM branch.

Wed May 22 10:04:25 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: When generating ABI compatibility checks in
	  xapian/version.h, pass $CXXFLAGS and $CPPFLAGS to $CXXCPP as they
	  could contain options which affect the ABI (such as -fabi-version
	  for GCC).  (Fixes #622)

Wed May 22 04:20:39 GMT 2013  Olly Betts <olly@survex.com>

	* common/win32_uuid.cc: Microsoft GUIDs in binary form have reversed
	  byte order in the first three components compared to standard UUIDs,
	  so the same database would report a different UUID on Windows to
	  on other platforms.  With this fix, the UUIDs of existing databases
	  will appear to change on Windows (except in rare "palindronic" cases).
